--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,24 +1,20 @@
-<div class="row-fluid">
-<div class="span3">
-<h1>Categories</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-  </tr>
-
+<div class = "row-fluid">
+<div class = "span3">
+<div class="well sidebar-nav">
+<ul class="nav nav-list">
+<li class = "nav-header">Categories</li>
+  
 <% @categories.each do |category| %>
-  <tr>
-    <td><%= link_to (category.name + " (#{category.books.count})"), :controller => 'categories', :action => 'index', :id => category, :class => "active" %></td>
-  </tr>
+<li><%= link_to (category.name + " (#{category.books.count})"), :controller => 'categories', :action => 'index', :id => category %></li>
 <% end %>
-</table>
 
 <br />
 
-<%= link_to 'New Category', new_category_path %>
+<li><%= link_to 'New Category', new_category_path %></li>
+</ul>
 </div>
-<div class="span9">
+</div>
+<div class = "span9 well well-small">
 <%= render :template => 'books/index' %>
 </div>
 </div>
