--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,7 +6,7 @@ Oops! No books have been added to this category yet.
 <% else %>
 <table class="table table-hover">
   <tr>
-    <th>Image </th> <!--maybe this delimiter - inline style. Better to get rid of him later-->
+    <th>Image </th> 
     <th>Title 
     <%= link_to "", {:controller => "categories", :action => "index", :ord => "asc", :id => params[:id]},
     :class => "icon-circle-arrow-up" %>
@@ -22,9 +22,9 @@ Oops! No books have been added to this category yet.
 
 <% @books.each do |book| %>
   <tr>
-    <td><%= book.image %></td>
+    <td><%= image_tag book.image.url %></td>
     <td><%= link_to book.title, book_path(book) %></td>
-    <td><%= book.category_id %></td>
+    <td><%= Category.find(book.category_id).name %></td>
     <td><%= book.author %></td>
     <td><%= book.description %></td>
     <td><%= link_to 'Edit', edit_book_path(book) %></td>
