--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <b>Image:</b>
-  <%= @book.image %>
+  <%= image_tag @book.image.url %>
 </p>
 
 <p>
@@ -12,7 +12,7 @@
 
 <p>
   <b>Category:</b>
-  <%= @book.category_id %>
+  <%= @category %>
 </p>
 
 <p>
