-PDF fucntionality, which is working only in the production mode, I hope. -also, I'm trying to create a branch

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -26,5 +26,5 @@
 </p>
 
 
-Link for PDF |
+<p id="pdf_link"><%= link_to "Download book in PDF", book_path(@book, :format => "pdf") %></p>|
 <%= link_to 'Back', categories_path %>
