Added emails from SalesForce and a possibility to donwload email's attachments

--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -55,3 +55,4 @@
           %td= stat[:unique_clicks]
           %td= stat[:unique_opens]
           %td= stat[:blocked]
+  = GoogleChart.graph(Sendgrid.statistics)
