--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,4 @@
 .well
-
   %h3= @contact.Name 
   %h3= @contact.Email
   .well
@@ -12,3 +11,14 @@
         .div= simple_format email.body.raw_source if email.body.present?
         - @attachments[@emails.index(email)].each do |att|
           %h4= link_to att.Name, "https://c.na15.content.force.com/servlet/servlet.FileDownload?file=#{att.Id}", target: "_blank" 
+.well
+  Company name:
+  %h3= @account.Name
+  .well
+    %h3 Here are company's emails:
+    - @account_emails.each do |email|
+      .well
+        %h5= "Subject: " + email.subject if email.subject.present?
+        %h5= "From: " + email.from.join(' ,') if email.from.present?
+        %h5= "To: " + email.to.join(' ,') if email.to.present?
+        .div= simple_format email.body.raw_source if email.body.present?
